added a cart section along with being able to add to that cart, fixed  the issue of being logged out from the client side when refreshed and added loading screen that i havent implemented into any code yet

--- a/library-app/src/Styles/library.css
+++ b/library-app/src/Styles/library.css
@@ -1,7 +1,10 @@
 /* Homepage Styles */
 
+
+
 /* Hero Section */
 .hero-section {
+    color: white;
     position: relative;
     height: 100vh;
     display: flex;
@@ -12,6 +15,14 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+  }
+
+  .hero-content h1 {
+    color: white;
+  }
+
+  .hero-subtitle {
+    color: white;
   }
   
   .hero-overlay {
